更新合约失败提示语

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Glückwunsch zur Teilnahme an der",
   "Congratulations on passing the verification!": "Glückwunsch zur erfolgreichen Überprüfung!",
   "Congratulations on successfully upgrading pro!": "Glückwunsch zur erfolgreichen Pro-Upgrade!",
+  "Upgrading pro failed!": "Das Upgrade auf die Pro-Version ist fehlgeschlagen!",
   "Connections": "Verbindungen",
   "Content": "Inhalt",
   "Context Length": "Kontextlänge",
