--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "",
   "Congratulations on passing the verification!": "",
   "Congratulations on successfully upgrading pro!": "",
+  "Upgrading pro failed!": "",
   "Connections": "",
   "Content": "",
   "Context Length": "",
