--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Felicitaciones por convertirse en",
   "Congratulations on passing the verification!": "Felicitaciones por pasar la verificación!",
   "Congratulations on successfully upgrading pro!": "Felicitaciones por actualizar exitosamente pro!",
+  "Upgrading pro failed!": "La actualización de la versión pro ha fallado!",
   "Connections": "Conexiones",
   "Content": "Contenido",
   "Context Length": "Longitud de contexto",
