--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Félicitations pour devenir",
   "Congratulations on passing the verification!": "Félicitations pour avoir passé la vérification!",
   "Congratulations on successfully upgrading pro!": "Félicitations pour avoir réussi à mettre à niveau pro!",
+  "Upgrading pro failed!": "La mise à niveau de la version pro a échoué!",
   "Connections": "Connexions",
   "Content": "Contenu",
   "Context Length": "Longueur du contexte",
