--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Selamat atas menjadi",
   "Congratulations on passing the verification!": "Selamat atas lulus verifikasi!",
   "Congratulations on successfully upgrading pro!": "Selamat atas berhasil melakukan upgrade pro!",
+  "Upgrading pro failed!": "Pengupgradean pro gagal!",
   "Connections": "Koneksi",
   "Content": "Isi",
   "Context Length": "Panjang Konteks",
