--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -128,6 +128,7 @@
   "Congratulations on becoming": "～になることをお祝いします",
   "Congratulations on passing the verification!": "検証に合格したことをお祝いします！",
   "Congratulations on successfully upgrading pro!": "プロ会員にアップグレードしたことをお祝いします！",
+  "Upgrading pro failed!": "プロ版のアップグレードに失敗しました!",
   "Connections": "接続",
   "Content": "コンテンツ",
   "Context Length": "コンテキスト長",
