--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "에 되신 것을 축하드립니다",
   "Congratulations on passing the verification!": "검증에 통과한 것을 축하드립니다!",
   "Congratulations on successfully upgrading pro!": "프로 업그레이드에 성공한 것을 축하드립니다!",
+  "Upgrading pro failed!": "프로 버전 업그레이드에 실패했습니다!",
   "Connections": "연결",
   "Content": "내용",
   "Context Length": "컨텍스트 길이",
