--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Parabéns por se tornar o",
   "Congratulations on passing the verification!": "Parabéns por passar na verificação!",
   "Congratulations on successfully upgrading pro!": "Parabéns por atualizar com sucesso o pro!",
+  "Upgrading pro failed!": "A atualização da versão pro falhou!",
   "Connections": "Conexões",
   "Content": "Conteúdo",
   "Context Length": "Comprimento do contexto",
