--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Поздравляем с тем, что стали",
   "Congratulations on passing the verification!": "Поздравляем с прохождением верификации!",
   "Congratulations on successfully upgrading pro!": "Поздравляем с успешным обновлением до pro!",
+  "Upgrading pro failed!": "Обновление профессиональной версии завершилось неудачно!",
   "Connections": "Соединения",
   "Content": "Содержание",
   "Context Length": "Длина контекста",
