--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "ยินดีในที่เป็น",
   "Congratulations on passing the verification!": "ยินดีในที่ผ่านการตรวจสอบ!",
   "Congratulations on successfully upgrading pro!": "ยินดีในที่อัปเกรด pro สำเร็จ!",
+  "Upgrading pro failed!": "การอัปเกรดโปรด้วยไม่สำเร็จ!",
   "Connections": "การเชื่อมต่อ",
   "Content": "เนื้อหา",
   "Context Length": "ความยาวของบริบท",
