--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Olma durumunuza tebrik ederiz",
   "Congratulations on passing the verification!": "Doğrulamayı geçme durumunuza tebrik ederiz!",
   "Congratulations on successfully upgrading pro!": "Pro yükseltmesini başarıyla tamamlama durumunuza tebrik ederiz!",
+  "Upgrading pro failed!": "Pro sürümünün yükseltmesi başarısız oldu!",
   "Connections": "Bağlantılar",
   "Content": "İçerik",
   "Context Length": "Bağlam Uzunluğu",
