--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -127,6 +127,7 @@
   "Congratulations on becoming": "Chúc mừng bạn đã trở thành",
   "Congratulations on passing the verification!": "Chúc mừng bạn đã vượt qua xác nhận!",
   "Congratulations on successfully upgrading pro!": "Chúc mừng bạn đã nâng cấp pro thành công!",
+  "Upgrading pro failed!": "Nâng cấp phiên bản pro thất bại!",
   "Connections": "Kết nối",
   "Content": "Nội dung",
   "Context Length": "Độ dài ngữ cảnh",
