--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -117,6 +117,7 @@
   "Congratulations on becoming": "恭喜成为",
   "Congratulations on passing the verification!": "恭喜通过验证！",
   "Congratulations on successfully upgrading pro!": "恭喜成功升级为专业版！",
+  "Upgrading pro failed!": "专业版升级失败!",
   "Connect Wallet": "连接钱包",
   "Connections": "连接；联系；关联",
   "Content": "内容",
