更新动态计算燃料费 以及 登陆框ui调整

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "Ihr privater Schlüssel eingeben",
   "Enter Your Role": "Ihre Rolle eingeben",
   "Estimated fuel costs:": "Geschätzte Brennstoffkosten:",
+  "Maximum cost:": "Maximalkosten:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Erweiterte Zugriffsrechte für Nachrichten, Bildverständnis, fortgeschrittene Datenanalyse und Webbrowsing",
   "Experimental": "Experimental",
   "Export": "Exportieren",
