--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "",
   "Enter Your Role": "",
   "Estimated fuel costs:": "",
+  "Maximum cost:": "",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "",
   "Experimental": "",
   "Export": "",
