--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "Ingrese su llave privada",
   "Enter Your Role": "Ingrese su rol",
   "Estimated fuel costs:": "Costos estimados de combustible:",
+  "Maximum cost:": "Costo máximo:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Derechos de acceso extendidos para mensajes, comprensión de imágenes, análisis de datos avanzados y navegación web",
   "Experimental": "Experimental",
   "Export": "Exportar",
