--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -231,6 +231,7 @@
   "Enter Your privateKey": "Entrer votre clé privée",
   "Enter Your Role": "Entrer votre rôle",
   "Estimated fuel costs:": "Coûts estimatifs de carburant:",
+  "Maximum cost:": "Coût maximum:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Droits d'accès étendus pour les messages, la compréhension des images, l'analyse de données avancée et la navigation sur le web",
   "Experimental": "Expérimental",
   "Export": "Exporter",
