--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "Masukkan Kunci Privat Anda",
   "Enter Your Role": "Masukkan Peran Anda",
   "Estimated fuel costs:": "Biaya bahan bakar perkiraan:",
+  "Maximum cost:": "Biaya maksimum:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Hak akses yang diperluas untuk pesan, pemahaman gambar, analisis data tingkat lanjut, dan penjelajahan web",
   "Experimental": "Eksperimental",
   "Export": "Ekspor",
