--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -233,6 +233,7 @@
   "Enter Your privateKey": "あなたの秘密鍵を入力してください",
   "Enter Your Role": "あなたの役割を入力してください",
   "Estimated fuel costs:": "推定燃料費：",
+  "Maximum cost:": "最大コスト:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "メッセージ、画像理解、高度なデータ分析、およびウェブ閲覧の拡張アクセス権限",
   "Experimental": "実験的",
   "Export": "エクスポートする",
