--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "개인 키 입력",
   "Enter Your Role": "역할 입력",
   "Estimated fuel costs:": "예상 연료 비용:",
+  "Maximum cost:": "최대 비용:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "메시지, 이미지 이해, 고급 데이터 분석 및 웹 브라우징에 대한 확장된 액세스 권한",
   "Experimental": "실험적",
   "Export": "내보내기",
