--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "Digite o seu chave privada",
   "Enter Your Role": "Digite o seu papel",
   "Estimated fuel costs:": "Custos estimados de combustível:",
+  "Maximum cost:": "Custo máximo:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Permissões de acesso ampliadas para mensagens, compreensão de imagens, análise avançada de dados e navegação na web",
   "Experimental": "Experimental",
   "Export": "Exportar",
