--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -231,6 +231,7 @@
   "Enter Your privateKey": "Введите ваш приватный ключ",
   "Enter Your Role": "Введите вашу роль",
   "Estimated fuel costs:": "Оценочные затраты на топливо:",
+  "Maximum cost:": "Максимальная стоимость:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Расширенные права доступа для сообщений, понимания изображений, продвинутого анализа данных и веб-обзора",
   "Experimental": "Экспериментальный",
   "Export": "Экспорт",
