--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "กรอกคีย์ส่วนตัวของคุณ",
   "Enter Your Role": "กรอกบทบาทของคุณ",
   "Estimated fuel costs:": "ค่าใช้จ่ายเชื้อเพลิงประมาณ:",
+  "Maximum cost:": "ต้นทุนสูงสุด:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "สิทธิ์การเข้าถึงที่ขยายสำหรับข้อความ การเข้าใจภาพ การวิเคราะห์ข้อมูลขั้นสูง และการท่องเว็บ",
   "Experimental": "ทดลอง",
   "Export": "ส่งออก",
