--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "Özel anahtarınızı girin",
   "Enter Your Role": "Rolünüzü girin",
   "Estimated fuel costs:": "Tahmini yakıt maliyetleri:",
+  "Maximum cost:": "Maksimum maliyet:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Mesajlar, resim anlama, gelişmiş veri analizi ve web tarayıcılığı için genişletilmiş erişim hakları",
   "Experimental": "Deneysel",
   "Export": "Dışa Aktar",
