--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -232,6 +232,7 @@
   "Enter Your privateKey": "Nhap khóa riêng của bạn",
   "Enter Your Role": "Nhap vai trò của bạn",
   "Estimated fuel costs:": "Chi phí nhiên liệu ước tính:",
+  "Maximum cost:": "Chi phí tối đa:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "Quyền truy cập mở rộng cho tin nhắn, hiểu biết về hình ảnh, phân tích dữ liệu nâng cao và duyệt web",
   "Experimental": "Thí nghiệm",
   "Export": "Xuất",
