--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -230,6 +230,7 @@
   "Enter Your privateKey": "输入你的私钥",
   "Enter Your Role": "输入你的角色",
   "Estimated fuel costs:": "预计燃料成本：",
+  "Maximum cost:": "最大成本:",
   "Extended access rights for message, image understanding, advanced data analysis, and web browsing": "对消息、图片理解、高级数据分析、网页浏览的扩展访问权限",
   "Experimental": "实验性的；试验性的",
   "Export": "导出",
