更新 图片回复 提示语

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -797,5 +797,7 @@
   "Thinking...": "Denken...",
   "What does this picture mean?": "Was bedeutet dieses Bild?",
   "Explain this picture": "Erklären Sie dieses Bild",
+  "What is the main idea of this picture?": "Was ist die Hauptidee dieses Bildes?",
+  "What does the symbol in the picture represent?": "Was repräsentiert das Symbol im Bild?",
   "Help me solve problems": "Helfen Sie mir, Probleme zu lösen"
 }
