--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -796,6 +796,8 @@
   "Thinking...": "",
   "What does this picture mean?": "",
   "Explain this picture": "",
+  "What is the main idea of this picture?": "",
+  "What does the symbol in the picture represent?": "",
   "Help me solve problems": ""
 }
 
