--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -796,5 +796,7 @@
   "Thinking...": "Pensando...",
   "What does this picture mean?": "¿Qué significa esta imagen?",
   "Explain this picture": "Explica esta imagen",
+  "What is the main idea of this picture?": "¿Cuál es la idea principal de esta imagen?",
+  "What does the symbol in the picture represent?": "¿Qué representa el símbolo en la imagen?",
   "Help me solve problems": "Ayúdame a resolver problemas"
 }
