--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -795,5 +795,7 @@
   "Thinking...": "En train de penser...",
   "What does this picture mean?": "Que signifie cette image?",
   "Explain this picture": "Expliquez cette image",
+  "What is the main idea of this picture?": "Quelle est l'idée principale de cette image?",
+  "What does the symbol in the picture represent?": "Que représente le symbole dans l'image?",
   "Help me solve problems": "Aidez - moi à résoudre des problèmes"
 }
