--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -796,5 +796,7 @@
   "Thinking...": "Sedang berpikir...",
   "What does this picture mean?": "Apa arti gambar ini?",
   "Explain this picture": "Jelaskan gambar ini",
+  "What is the main idea of this picture?": "Apa gagasan utama gambar ini?",
+  "What does the symbol in the picture represent?": "Apa yang diwakili oleh simbol dalam gambar itu?",
   "Help me solve problems": "Bantu saya menyelesaikan masalah - masalah"
 }
