--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -796,5 +796,7 @@
   "Thinking...": "考え中...",
   "What does this picture mean?": "この絵は何を意味しますか？",
   "Explain this picture": "この絵を説明してください",
+  "What is the main idea of this picture?":"この絵の主要なアイデアは何ですか？",
+  "What does the symbol in the picture represent?":"絵の中の記号は何を表していますか？",
   "Help me solve problems": "問題を解決するのを手伝ってください"
 }
