--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -796,5 +796,7 @@
   "Thinking...": "Pensando...",
   "What does this picture mean?": "O que significa esta imagem?",
   "Explain this picture": "Explique esta imagem",
+  "What is the main idea of this picture?": "Qual é a ideia principal desta imagem?",
+  "What does the symbol in the picture represent?": "O que o símbolo na imagem representa?",
   "Help me solve problems": "Ajude - me a resolver problemas"
 }
