--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -795,5 +795,7 @@
   "Thinking...": "กำลังคิดอยู่...",
   "What does this picture mean?": "ภาพนี้หมายถึงอะไร?",
   "Explain this picture": "อธิบายภาพนี้ด้วย",
+  "What is the main idea of this picture?": "ความคิดหลักของภาพนี้คืออะไร?",
+  "What does the symbol in the picture represent?": "สัญลักษณ์ในภาพนี้แทนอะไร?",
   "Help me solve problems": "ช่วยฉันแก้ปัญหา"
 }
