--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -796,5 +796,7 @@
   "Thinking...": "Düşünüyor...",
   "What does this picture mean?": "Bu resim ne anlama geliyor?",
   "Explain this picture": "Bu resmi açıkla",
+  "What is the main idea of this picture?": "Bu resmin ana fikri nedir?",
+  "What does the symbol in the picture represent?": "Resimdeki sembol neyi temsil eder?",
   "Help me solve problems": "Bana problemleri çözmemde yardım et"
 }
