--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -795,5 +795,7 @@
   "Thinking...": "正在思考...",
   "What does this picture mean?": "这张图是什么意思？",
   "Explain this picture": "解释这张图",
+  "What is the main idea of this picture?": "这张图的主旨是什么?",
+  "What does the symbol in the picture represent?": "图中的符号代表什么?",
   "Help me solve problems": "帮我解题"
 }
