--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -795,5 +795,7 @@
   "Thinking...": "Думаю...",
   "What does this picture mean?": "Что означает это изображение?",
   "Explain this picture": "Объясните это изображение",
+  "What is the main idea of this picture?":"Какова главная идея этого изображения?",
+  "What does the symbol in the picture represent?":"Что представляет собой символ на изображении?",
   "Help me solve problems": "Помогите мне решить проблемы"
 }
