图片模型添加回复持续几秒

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -799,5 +799,6 @@
   "Explain this picture": "Erklären Sie dieses Bild",
   "What is the main idea of this picture?": "Was ist die Hauptidee dieses Bildes?",
   "What does the symbol in the picture represent?": "Was repräsentiert das Symbol im Bild?",
-  "Help me solve problems": "Helfen Sie mir, Probleme zu lösen"
+  "Help me solve problems": "Helfen Sie mir, Probleme zu lösen",
+  "Last for {{ time }} seconds": "Dauert {{ time }} Sekunden lang"
 }
