--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -798,5 +798,6 @@
   "Explain this picture": "Jelaskan gambar ini",
   "What is the main idea of this picture?": "Apa gagasan utama gambar ini?",
   "What does the symbol in the picture represent?": "Apa yang diwakili oleh simbol dalam gambar itu?",
-  "Help me solve problems": "Bantu saya menyelesaikan masalah - masalah"
+  "Help me solve problems": "Bantu saya menyelesaikan masalah - masalah",
+  "Last for {{ time }} seconds": "Berlangsung selama {{ time }} detik"
 }
