--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -798,5 +798,6 @@
   "Explain this picture": "이 그림을 설명해 주세요",
   "What is the main idea of this picture?": "이 그림의 주요 아이디어는 무엇입니까?",
   "What does the symbol in the picture represent?": "그림 속 기호는 무엇을 나타내는 것입니까?",
-  "Help me solve problems": "문제 해결을 돕 me 주세요."
+  "Help me solve problems": "문제 해결을 돕 me 주세요.",
+  "Last for {{ time }} seconds": "{{ time }} 초 동안 지속됩니다"
 }
