--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -798,5 +798,6 @@
   "Explain this picture": "Bu resmi açıkla",
   "What is the main idea of this picture?": "Bu resmin ana fikri nedir?",
   "What does the symbol in the picture represent?": "Resimdeki sembol neyi temsil eder?",
-  "Help me solve problems": "Bana problemleri çözmemde yardım et"
+  "Help me solve problems": "Bana problemleri çözmemde yardım et",
+  "Last for {{ time }} seconds": "{{ time }} saniye sürer"
 }
