--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -797,5 +797,6 @@
   "Explain this picture": "解释这张图",
   "What is the main idea of this picture?": "这张图的主旨是什么?",
   "What does the symbol in the picture represent?": "图中的符号代表什么?",
-  "Help me solve problems": "帮我解题"
+  "Help me solve problems": "帮我解题",
+  "Last for {{ time }} seconds": "持续{{ time }}秒"
 }
