--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -535,7 +535,8 @@
   "Update and Copy Link": "Aktualisieren und Link kopieren",
   "Update password": "Passwort aktualisieren",
   "Upload a GGUF model": "Ein GGUF-Modell hochladen",
-  "Upload files": "Dateien hochladen",
+  "Attach files": "Dateien anhängen",
+  "Attach files is unavailable": "Anfügen von Dateien ist nicht verfügbar",
   "Upload Progress": "Upload-Progress",
   "URL Mode": "URL-Modus",
   "Use '#' in the prompt input to load and select your documents.": "Verwenden Sie '#' im Prompt-Eingabefeld, um Ihre Dokumente zu laden und auszuwählen.",
@@ -800,5 +801,7 @@
   "What is the main idea of this picture?": "Was ist die Hauptidee dieses Bildes?",
   "What does the symbol in the picture represent?": "Was repräsentiert das Symbol im Bild?",
   "Help me solve problems": "Helfen Sie mir, Probleme zu lösen",
-  "Last for {{ time }} seconds": "Dauert {{ time }} Sekunden lang"
+  "Last for {{ time }} seconds": "Dauert {{ time }} Sekunden lang",
+  "Search the web": "Im Internet suchen",
+  "search": "Suche"
 }
