--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -535,7 +535,8 @@
   "Update and Copy Link": "",
   "Update password": "",
   "Upload a GGUF model": "",
-  "Upload files": "",
+  "Attach files": "",
+  "Attach files is unavailable": "",
   "Upload Progress": "",
   "URL Mode": "",
   "Use '#' in the prompt input to load and select your documents.": "",
@@ -799,6 +800,8 @@
   "What is the main idea of this picture?": "",
   "What does the symbol in the picture represent?": "",
   "Help me solve problems": "",
-  "Last for {{ time }} seconds": ""
+  "Last for {{ time }} seconds": "",
+  "Search the web": "",
+  "search": ""
 }
 
