--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -535,7 +535,8 @@
   "Update and Copy Link": "Güncelle ve Bağlantıyı Kopyala",
   "Update password": "Şifreyi Güncelle",
   "Upload a GGUF model": "GGUF modelini yükleyin",
-  "Upload files": "Dosyalar yükleyin",
+  "Attach files": "Dosyaları ekle",
+  "Attach files is unavailable": "Dosyaları ekleme mümkün değil",
   "Upload Progress": "Yükleme İlerleme Durumu",
   "URL Mode": "URL Modu",
   "Use '#' in the prompt input to load and select your documents.": "İstem girişinde '#' kullanarak belgelerinizi yükleyin ve seçin.",
@@ -799,5 +800,7 @@
   "What is the main idea of this picture?": "Bu resmin ana fikri nedir?",
   "What does the symbol in the picture represent?": "Resimdeki sembol neyi temsil eder?",
   "Help me solve problems": "Bana problemleri çözmemde yardım et",
-  "Last for {{ time }} seconds": "{{ time }} saniye sürer"
+  "Last for {{ time }} seconds": "{{ time }} saniye sürer",
+  "Search the web": "Web'de Ara",
+  "search": "arama"
 }
