--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -582,7 +582,8 @@
   "Please log in to the third party of the platform to confirm the authorization.": "请前往登录平台的第三方进行确认授权。",
   "Please open the mobile app and approve the transaction request.": "请打开手机应用程序并批准交易请求。",
   "Upload a GGUF model": "上传一个 GGUF 模型",
-  "Upload files": "上传文件",
+  "Attach files": "附加文件",
+  "Attach files is unavailable": "附加文件不可用",
   "Upload Progress": "上传进度",
   "URL Mode": "网址模式",
   "Use '#' in the prompt input to load and select your documents.": "在提示输入框中使用 '#' 来加载和选择您的文档。",
@@ -798,5 +799,7 @@
   "What is the main idea of this picture?": "这张图的主旨是什么?",
   "What does the symbol in the picture represent?": "图中的符号代表什么?",
   "Help me solve problems": "帮我解题",
-  "Last for {{ time }} seconds": "持续{{ time }}秒"
+  "Last for {{ time }} seconds": "持续{{ time }}秒",
+  "Search the web": "搜索网页",
+  "search": "搜索"
 }
