--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -802,6 +802,8 @@
   "Help me solve problems": "",
   "Last for {{ time }} seconds": "",
   "Search the web": "",
-  "search": ""
+  "search": "",
+  "Web Search": "",
+  "Web Searching ...": ""
 }
 
